# _404

./: .zprofile  .zshrc  Justfile  README.md  init.sh
.config/: mimeapps.list  xdg-terminals.list
.config/codex/: Justfile  README.md  config.toml  history.jsonl  models_cache.json  pyproject.toml  state_5.sqlite
.config/codex/.codex/: auth.json  config.toml  history.jsonl  installation_id  logs_2.sqlite-shm  models_cache.json  state_5.sqlite  state_5.sqlite-shm  state_5.sqlite-wal  version.json
.config/codex/.codex/.tmp/: plugins.sha
.config/codex/.codex/shell_snapshots/: 019dcd28-0aeb-7200-8163-fc5d467be692.1777263446796686949.sh
.config/codex/anchors/: anchor_registry.bootstrap.json
.config/codex/control/git-flow/loop/: README.md
.config/codex/control/git-flow/plan/: README.md
.config/codex/control/github/: bootstrap_control_plane_project.sh
.config/codex/control/policy/: README.md  token_burn_and_structured_output.md  token_burn_and_structured_output.registry.json
.config/codex/control/shell/: shell_script_inventory.json
.config/codex/prompt-registry/schemas/: registry.schema.json  snippet.schema.json  workflow.schema.json
.config/codex/schemas/: archive_envelope.schema.json  contract_bindings.schema.json  promotion_plan.schema.json  response.schema.json  response_to_next_request.schema.json
.config/codex/skills/: registry.json
.config/codex/skills/chezmoi/: SKILL.md
.config/codex/skills/hof/: SKILL.md
.config/codex/skills/json-tool/: SKILL.md
.config/codex/skills/loop/: SKILL.md
.config/codex/skills/scripts/: compose_workflow.py
(+373 files in other folders)
