[project]
name = "codex-home"
version = "0.1.0"
description = "Recovered Codex operational substrate for runtime envelopes, proposal emitters, and Marimo-hosted state workflows."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "jsonargparse>=4.41.0",
  "jsonschema>=4.23.0",
  "marimo>=0.13.15",
  "msgspec>=0.19.0",
  "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
  "pytest>=8.3.5",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
addopts = "-ra"
python_files = ["test_*.py"]
